docs:Improve Swagger Specification
