# swagger.json
@@ -5,7 +5,7 @@
     "version": "2.0",
     "title": "Nodejs eCommerce API",
     "contact": {
-      "email": "anonymous@gmail.com"
+      "email": "samin.bese19seecs@seecs.edu.pk"
     }
   },
   "externalDocs": {
@@ -17,15 +17,15 @@
   ],
   "tags": [
     {
-      "name": "user",
+      "name": "User",
       "description": "Operations about user"
     },
     {
-      "name": "category",
+      "name": "Category",
       "description": "Operations about category"
     },
     {
-      "name": "product",
+      "name": "Product",
       "description": "Operations about product"
     },
     {
@@ -34,10 +34,10 @@
     }
   ],
   "paths": {
-    "/user": {
+    "/auth/signup": {
       "post": {
         "tags": [
-          "user"
+          "User"
         ],
         "summary": "Create user",
         "description": "",
@@ -47,53 +47,32 @@
         "parameters": [
           {
             "in": "formData",
-            "name": "firstName",
+            "name": "name",
             "type": "string",
-            "description": "firstName of the user",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          },
-          {
-            "in": "formData",
-            "name": "lastName",
-            "type": "string",
-            "description": "lastName of the user",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "description": "Username"
           },
           {
             "in": "formData",
             "name": "email",
             "type": "string",
-            "description": "user email",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "description": "User email"
           },
           {
             "in": "formData",
             "name": "password",
             "type": "string",
-            "description": "user password",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "description": "User password"
           },
           {
             "in": "formData",
             "name": "phone",
             "type": "string",
-            "description": "user phonenumber",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "description": "User phone-number"
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "Successful operation"
           },
           "400": {
             "description": "Invalid name/email/password/phone supplied"
@@ -101,10 +80,10 @@
         }
       }
     },
-    "/user/login": {
+    "/auth/login": {
       "post": {
         "tags": [
-          "user"
+          "User"
         ],
         "summary": "Log in user",
         "description": "",
@@ -116,24 +95,18 @@
             "in": "formData",
             "name": "email",
             "type": "string",
-            "description": "user email",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "description": "User email"
           },
           {
             "in": "formData",
             "name": "password",
             "type": "string",
-            "description": "user password",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "description": "User password"
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "Successful operation"
           },
           "400": {
             "description": "Invalid email/password supplied"
@@ -141,111 +114,12 @@
         }
       }
     },
-    "/user/data": {
-      "get": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Check user authentication",
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "header",
-            "name": "auth-token",
-            "description": "token given to user upon a successful login"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation"
-          },
-          "400": {
-            "description": "Invalid token provided"
-          }
-        }
-      }
-    },
-    "/user/{userId}": {
-      "patch": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Update user",
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "userId",
-            "description": "userId that need to be updated",
-            "type": "string"
-          },
-          {
-            "in": "header",
-            "name": "auth-token",
-            "description": "token given to user upon a successful login"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Updated user object",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation"
-          },
-          "400": {
-            "description": "Bad request"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Delete user",
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "userId",
-            "description": "userId that needs to be deleted",
-            "type": "string"
-          },
-          {
-            "in": "header",
-            "name": "auth-token",
-            "description": "token given to user upon a successful login"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation"
-          },
-          "400": {
-            "description": "Bad request"
-          }
-        }
-      }
-    },
     "/category": {
       "post": {
         "tags": [
-          "category"
+          "Category"
         ],
-        "summary": "add a category",
+        "summary": "Add a category",
         "description": "",
         "produces": [
           "application/json"
@@ -255,15 +129,12 @@
             "in": "formData",
             "name": "name",
             "type": "string",
-            "description": "category name",
-            "schema": {
-              "$ref": "#/definitions/Category"
-            }
+            "description": "Category name"
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "Successful operation"
           },
           "400": {
             "description": "Bad request"
@@ -274,16 +145,45 @@
     "/category/show": {
       "get": {
         "tags": [
-          "category"
+          "Category"
         ],
-        "summary": "list categories",
+        "summary": "List All categories",
         "description": "",
         "produces": [
           "application/json"
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "Successful operation"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        }
+      }
+    },
+    "/category/{id}": {
+      "get": {
+        "tags": [
+          "Category"
+        ],
+        "summary": "Find category by ID",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "integer",
+            "description": "ID of category to return",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation"
           },
           "400": {
             "description": "Bad request"
@@ -294,9 +194,9 @@
     "/product": {
       "post": {
         "tags": [
-          "product"
+          "Product"
         ],
-        "summary": "add a product",
+        "summary": "Add a product",
         "description": "",
         "produces": [
           "application/json"
@@ -306,60 +206,48 @@
             "in": "formData",
             "name": "name",
             "type": "string",
-            "description": "product name",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
+            "description": "Product name"
           },
           {
             "in": "formData",
             "name": "description",
             "type": "string",
-            "description": "product description",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
+            "description": "Product description"
           },
           {
             "in": "formData",
             "name": "price",
             "type": "string",
-            "description": "product price",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
+            "description": "Product price"
+          },
+          {
+            "in": "formData",
+            "name": "product_image",
+            "type": "file",
+            "description": "Product image"
+          },
+          {
+            "in": "formData",
+            "name": "sku",
+            "type": "string",
+            "description": "Product sku"
           },
           {
             "in": "formData",
             "name": "quantity",
             "type": "integer",
-            "description": "product quantity",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
+            "description": "Product quantity"
           },
           {
             "in": "formData",
-            "name": "productImage",
-            "type": "file",
-            "description": "product image",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
-          },
-          {
-            "in": "formData",
-            "name": "categoryId",
+            "name": "category_id",
             "type": "string",
-            "description": "product categoryId",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
+            "description": "Product categoryId"
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "Successful operation"
           },
           "400": {
             "description": "Bad request"
@@ -370,16 +258,45 @@
     "/product/show": {
       "get": {
         "tags": [
-          "product"
+          "Product"
         ],
-        "summary": "list products",
+        "summary": "List all products",
         "description": "",
         "produces": [
           "application/json"
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "Successful operation"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        }
+      }
+    },
+    "/product/{id}": {
+      "get": {
+        "tags": [
+          "Product"
+        ],
+        "summary": "Find product by ID",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "integer",
+            "description": "ID of product to return",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation"
           },
           "400": {
             "description": "Bad request"
@@ -402,28 +319,19 @@
             "in": "formData",
             "name": "userId",
             "type": "string",
-            "description": "user id",
-            "schema": {
-              "$ref": "#/definitions/Cart"
-            }
+            "description": "user id"
           },
           {
             "in": "formData",
             "name": "productId",
             "type": "string",
-            "description": "product id",
-            "schema": {
-              "$ref": "#/definitions/Cart"
-            }
+            "description": "product id"
           },
           {
             "in": "formData",
             "name": "quantity",
             "type": "integer",
-            "description": "product quantity",
-            "schema": {
-              "$ref": "#/definitions/Cart"
-            }
+            "description": "product quantity"
           }
         ],
         "responses": {
@@ -451,68 +359,8 @@
             "in": "path",
             "name": "cartId",
             "description": "cartId of the order",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation"
-          },
-          "400": {
-            "description": "Bad request"
-          }
-        }
-      }
-    },
-    "/cart/show/{userId}": {
-      "get": {
-        "tags": [
-          "cart"
-        ],
-        "summary": "list all the orders of the user / show cart",
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "userId",
-            "description": "id of the user",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation"
-          },
-          "400": {
-            "description": "Bad request"
-          }
-        }
-      }
-    },
-    "/admin/user/{userId}": {
-      "delete": {
-        "tags": [
-          "admin"
-        ],
-        "summary": "Delete user",
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "userId",
-            "description": "userId that needs to be deleted",
-            "type": "string"
-          },
-          {
-            "in": "header",
-            "name": "admin-token",
-            "description": "token given to admin upon a successful login"
+            "type": "string",
+            "required": true
           }
         ],
         "responses": {
